# point_cloud_viewer

./: Cargo.toml  build.rs  compression.cc
octree_web_viewer/src/: backend.rs
point_viewer_grpc/src/: lib.rs
point_viewer_tower_grpc/: Cargo.toml  build.rs  watcher.lua
point_viewer_tower_grpc/src/: main.rs
sdl_viewer/: Cargo.toml
sdl_viewer/shaders/: points.vs
sdl_viewer/src/: node_drawer.rs
src/: color.rs  lib.rs
src/octree/: mod.rs
xray/src/: build_quadtree.rs  generation.rs
