[package]
authors = ["Holger Rapp <hrapp@google.com>"]
name = "point_viewer"
version = "0.1.0"

[dependencies]
byteorder = "^0.5.3"
cgmath = "0.16.0"
clap = "^2.31.2"
collision = "0.18.0"
error-chain = "0.11.0"
fnv = "1.0.6"
num = "0.1.36"
num-traits = "0.1.36"
pbr = "1.0.0-alpha.1"
protobuf = "1.4.3"
scoped-pool = "^0.1"
sled = "0.15.17"
walkdir = "^0.1.5"

[dependencies.point_viewer_proto_rust]
path = "point_viewer_proto_rust"

[workspace]
members = ["point_viewer_grpc", "point_viewer_grpc_proto_rust", "point_viewer_proto_rust", "quadtree", "sdl_viewer", "web_viewer", "xray", "xray_proto_rust"]
