[package]
name = "point_viewer_tower_grpc"
version = "0.1.0"
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]


[build-dependencies]
tower-grpc-build = { git="https://github.com/tower-rs/tower-grpc.git", rev="0afac3d409febe20db4432b5abe06dbd72bd4c95" }

[dependencies]
tower-grpc = { git="https://github.com/tower-rs/tower-grpc.git", rev="0afac3d409febe20db4432b5abe06dbd72bd4c95" }
prost-derive = "0.4.0"
prost = "0.4.0"
serde_derive = "1.0.0"
bytes = "0.4"
tokio-core = "0.1"
futures = "0.1"
# NOCOM(#sirver): pin revisions
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-service = { git = "https://github.com/tower-rs/tower" }
point_viewer = { path = ".." }
